--- a/deep-learning.html
+++ b/deep-learning.html
@@ -82,7 +82,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697984720-deep-learning-engineer'>Bosch Group Deep Learning Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697984720-deep-learning-engineer'>Bosch Group Deep Learning Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -90,7 +90,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">Shanghai, China</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://martinsenmayer.recruitee.com/o/deep-learning-engineer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://martinsenmayer.recruitee.com/o/deep-learning-engineer'>
       Deep Learning Engineer - Martinsen Mayer
     </a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
@@ -122,7 +122,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tencent/jobs/4473307002'>Job Application for Deep Learning Researcher at Tencent</a></h5> 
+<h5><a href='https://boards.greenhouse.io/tencent/jobs/4473307002'>Job Application for Deep Learning Researcher at Tencent</a></h5> 
 <p><span class="badge badge-light">Palo Alto</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -175,7 +175,7 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697330844-working-student-deep-learning-ai-computer-vision-data-management'>Bosch Group Working student Deep Learning - AI - Computer Vision - Data Management | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697330844-working-student-deep-learning-ai-computer-vision-data-management'>Bosch Group Working student Deep Learning - AI - Computer Vision - Data Management | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -236,7 +236,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
-<h5><a href='https://crisalix.workable.com/j/1361EF4831'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/1361EF4831'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
@@ -304,11 +304,11 @@ with a?...</p>
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-09-24</p>
 <hr/>
-<h5><a href='https://abbvie.referrals.selectminds.com/jobs/post-doctoral-fellow-in-deep-learning-11898'>Post-Doctoral Fellow in Deep Learning - AbbVie Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://abbvie.referrals.selectminds.com/jobs/post-doctoral-fellow-in-deep-learning-11898'>Post-Doctoral Fellow in Deep Learning - AbbVie Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://headhonchos.quezx.com/jobs/Manager-Analytics-Deep-Machine-Learning-Iit-nit-iim-isb-xlri-fms-Business-Analytics-Consumer-Durables-Semi-Durables-Gurgaon-1263033'>Hiring For Manager - Analytics - Deep Machine Learning - Iit/nit/iim/isb/xlri/fms in Gurgaon for Exp: 5-10 yrs</a></h5> 
+<h5><a href='https://headhonchos.quezx.com/jobs/Manager-Analytics-Deep-Machine-Learning-Iit-nit-iim-isb-xlri-fms-Business-Analytics-Consumer-Durables-Semi-Durables-Gurgaon-1263033'>Hiring For Manager - Analytics - Deep Machine Learning - Iit/nit/iim/isb/xlri/fms in Gurgaon for Exp: 5-10 yrs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-23</p>
 <hr/>
@@ -334,7 +334,7 @@ design, build, and ship TensorRT: NVIDIA's high-performance deep learning?...</p
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-09-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oJY4afwF'>Samsung Semiconductor, Inc. Careers - Deep Learning Theory Researcher/ Scientist Intern</a></h5> 
+<h5><a href='http://jobs.jobvite.com/samsungssi/job/oJY4afwF'>Samsung Semiconductor, Inc. Careers - Deep Learning Theory Researcher/ Scientist Intern</a></h5> 
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-09-18</p>
 <hr/>
@@ -344,7 +344,7 @@ design, build, and ship TensorRT: NVIDIA's high-performance deep learning?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-18</p>
 <hr/>
-<h5><a href='https://ai-jobs.net/job/solutions-architect-energy-deep-learning/'>Solutions Architect, Energy - Deep Learning | ai-jobs.net</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ai-jobs.net/job/solutions-architect-energy-deep-learning/'>Solutions Architect, Energy - Deep Learning | ai-jobs.net</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-17</p>
 <hr/>
@@ -385,7 +385,7 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
-<h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/US-CA-Santa-Clara/Deep-Learning-Architecture-Intern---Hardware_JR1923834'>Deep Learning Architecture Intern - Hardware</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/US-CA-Santa-Clara/Deep-Learning-Architecture-Intern---Hardware_JR1923834'>Deep Learning Architecture Intern - Hardware</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Compute Performance Developer Technology Intern - CUDA | US, CA, Santa 
 Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
@@ -431,7 +431,7 @@ software engineer while also allowing you to work with state-of-the-art?...</p>
 <p><span class="badge badge-light">Barcelona Barcelona  Barcelona  Tallinn, Harju County, Estonia</span></p>
 <p>Posted on: 2019-09-03</p>
 <hr/>
-<h5><a href='https://thomsonreuters.wd5.myworkdayjobs.com/External_Career_Site/job/CHE-Zug-LandisGyr-Strasse-3/Senior-Data-Scientist---Deep-Learning_JREQ128968?source=Applicant_Source_Thomson_Reuters_Career_Center'>Senior Data Scientist - Deep Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thomsonreuters.wd5.myworkdayjobs.com/External_Career_Site/job/CHE-Zug-LandisGyr-Strasse-3/Senior-Data-Scientist---Deep-Learning_JREQ128968?source=Applicant_Source_Thomson_Reuters_Career_Center'>Senior Data Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... We are currently looking for a senior data scientist with a passion for deep 
 learning to join the team at Thomson Reuters Labs in Zug. What do we do?</p>
