--- a/product-manager.html
+++ b/product-manager.html
@@ -40,19 +40,25 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
+<h5><a href='https://joinoyster.recruitee.com/o/product-manager'>
+      Product Manager - Oyster Financial Inc 
+    </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
+<h5><a href='http://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
+<p><span class="badge badge-light">San Francisco, California</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/splunk/job/oqjrbfw5'>Splunk Careers - Senior Product Manager/Product Manager - Developer Programs</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://coachhub.join.com/jobs/458113-senior-product-manager-m-w-d'>Job @ Coachhub (Berlin): Senior Product Manager (m... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AveryDennison/743999698384534-product-manager-digital-printing-materials-graphics-'>Avery Dennison Product Manager - Digital Printing Materials (Graphics) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AveryDennison/743999698384534-product-manager-digital-printing-materials-graphics-'>Avery Dennison Product Manager - Digital Printing Materials (Graphics) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Oegstgeest, Netherlands</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -86,7 +92,7 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/innerworkings/job/olz7afwV'>InnerWorkings Careers - Senior Agile Product Owner</a></h5> 
+<h5><a href='https://jobs.jobvite.com/innerworkings/job/olz7afwV'>InnerWorkings Careers - Senior Agile Product Owner</a></h5> 
 <p><span class="badge badge-light">Prague, Czech Republic</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -94,7 +100,7 @@
 <p><span class="badge badge-light">New York, USA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://producthire.net/job/senior-product-manager-legal-systems/'>Senior Product Manager, Legal Systems | PRODUCTHIRE.NET</a></h5> 
+<h5><a href='https://producthire.net/job/senior-product-manager-legal-systems/'>Senior Product Manager, Legal Systems | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light">New York, USA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -118,7 +124,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://snap.hr/sky/job/adsmart-product-manager/0876de8dc6853de258d525b2ca4763fd/'>AdSmart Product Manager at Sky</a></h5> 
+<h5><a href='https://snap.hr/sky/job/adsmart-product-manager/0876de8dc6853de258d525b2ca4763fd/'>AdSmart Product Manager at Sky</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -198,7 +204,7 @@
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=ofpobfwX&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nBJTmMwQ'>Guidewire Software, Inc. Careers - Senior Product Manager - Dublin, Ireland</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=ofpobfwX&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nBJTmMwQ'>Guidewire Software, Inc. Careers - Senior Product Manager - Dublin, Ireland</a></h5> 
 <p><span class="badge badge-light">Dublin Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -254,7 +260,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Oct 14, 2019 ... Apply to Senior Product Manager at FastPay in Framingham, MA.</p>
 <hr/>
-<h5><a href='https://theorem.applytojob.com/apply/kIRkn2iqvO/Senior-Product-Manager-REMOTE'>Senior Product Manager REMOTE - Theorem, LLC - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://theorem.applytojob.com/apply/kIRkn2iqvO/Senior-Product-Manager-REMOTE'>Senior Product Manager REMOTE - Theorem, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 17, 2019 ... We're looking for an experienced product manager to join the team at Theorem. It 
 is expected that you have lived the full product lifecycle, having brought mult.</p>
@@ -278,7 +284,7 @@ New York, NY.</p>
 <p><span class="badge badge-light">Cape Town South Africa  Cape Town Vancouver</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/internetbrands/job/oy6obfwX'>Internet Brands Careers - Associate Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/internetbrands/job/oy6obfwX'>Internet Brands Careers - Associate Product Manager</a></h5> 
 <p><span class="badge badge-light">Los Angeles, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -324,7 +330,7 @@ New York, NY.</p>
 <p><span class="badge badge-light">Bristol, UK</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bixal/58b85f80-5082-4a0a-8fba-abbab172cc9f'>Bixal - Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/bixal/58b85f80-5082-4a0a-8fba-abbab172cc9f'>Bixal - Product Manager</a></h5> 
 <p><span class="badge badge-light">Baltimore, MD</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -340,7 +346,7 @@ New York, NY.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/chewse/jobs/4490115002'>Job Application for Sr. Product Designer at Chewse</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/chewse/jobs/4490115002'>Job Application for Sr. Product Designer at Chewse</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -454,10 +460,6 @@ New York, NY.</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698291868-product-manager-biosimilars-m-f-'>Biogen Product Manager, Biosimilars (m/f) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/airwallex/5b3f9265-c396-43fe-8019-96bf75cfb8b5'>Airwallex - Lead Product Designer</a></h5> 
-<p><span class="badge badge-light">Melbourne  Australia</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 
